--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "node": "^20.4.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   }
 }
